--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,12 +9,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 8
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: [3.9, '3.10', 3.11, 3.12]
+        os: [macos-latest, windows-latest, ubuntu-latest]
         pytorch-release: ["earliest", "latest"]
         include:
           - pytorch-version: 1.9.1
@@ -23,8 +24,17 @@ jobs:
           - pytorch-version: 1.11.0
             python-version: '3.10'
             pytorch-release: earliest
+          - pytorch-version: 2.0.1
+            python-version: 3.11
+            pytorch-release: earliest
+          - pytorch-version: 2.2.2
+            python-version: 3.12
+            pytorch-release: earliest
           - pytorch-version: 2.5.1
             pytorch-release: latest
+          - pytorch-option: '+cpu'
+          - pytorch-option: ''
+            os: macos-latest
           
     steps:
     - uses: actions/checkout@v4
@@ -36,7 +46,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install 'numpy<2'
-        pip install torch==${{ matrix.pytorch-version }}+cpu -f https://download.pytorch.org/whl/torch
+        pip install torch==${{ matrix.pytorch-version }}${{ matrix.pytorch-option }} -f https://download.pytorch.org/whl/torch
     - name: Hello World
       run: |
         echo 'Hello World!'
